Header and Grid update

--- a/packages/storybook-html/stories/components/grid-menu/grid-menu.mdx
+++ b/packages/storybook-html/stories/components/grid-menu/grid-menu.mdx
@@ -19,9 +19,7 @@ The height of the grid menu items is by default equalised on its row.
 
 ## Default example
 
-{/* <Story id="components-grid-menu--grid-menu-default" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
-
-<Story id="components-grid-menu--grid-menu-default" />
+  <Story of={GridMenuStories.gridMenuDefault} /> 
 
 ```html
 <h2>Grid menu default</h2>
@@ -51,9 +49,7 @@ The height of the grid menu items is by default equalised on its row.
 
 ### With description
 
-{/* <Story id="components-grid-menu--grid-menu-description" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
-
-<Story id="components-grid-menu--grid-menu-description" />
+  <Story of={GridMenuStories.gridMenuDescription} /> 
 
 ```html
 <ul class="uq-grid-menu">
@@ -76,9 +72,7 @@ The height of the grid menu items is by default equalised on its row.
 
 ### With dark text
 
-{/* <Story id="components-grid-menu--grid-menu-dark-text" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
-
-<Story id="components-grid-menu--grid-menu-dark-text" />
+  <Story of={GridMenuStories.gridMenuDarkText} /> 
 
 ```html
 <ul class="uq-grid-menu uq-grid-menu--dark-text">
@@ -101,9 +95,7 @@ The height of the grid menu items is by default equalised on its row.
 
 ### With icons
 
-{/* <Story id="components-grid-menu--grid-menu-icons" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
-
-<Story id="components-grid-menu--grid-menu-icons" />
+  <Story of={GridMenuStories.gridMenuIcons} /> 
 
 ```html
 <ul class="uq-grid-menu">
@@ -121,9 +113,7 @@ The height of the grid menu items is by default equalised on its row.
 
 ### 2 column
 
-{/* <Story id="components-grid-menu--grid-menu-2-column" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
-
-<Story id="components-grid-menu--grid-menu-2-column" />
+  <Story of={GridMenuStories.gridMenu2Column} /> 
 
 ```html
 <ul class="uq-grid-menu uq-grid-menu--2-column">
@@ -136,9 +126,7 @@ The height of the grid menu items is by default equalised on its row.
 
 ### 4 column
 
-{/* <Story id="components-grid-menu--grid-menu-4-column" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
-
-<Story id="components-grid-menu--grid-menu-4-column" />
+  <Story of={GridMenuStories.gridMenu4Column} /> 
 
 ```html
 <ul class="uq-grid-menu uq-grid-menu--4-column">
@@ -153,6 +141,4 @@ The height of the grid menu items is by default equalised on its row.
 
 This is an example of Grid menu items equalising height by default in its row
 
-{/* <Story id="components-grid-menu--grid-menu-equalised-height" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
-
-<Story id="components-grid-menu--grid-menu-equalised-height" />
+  <Story of={GridMenuStories.gridMenuEqualisedHeight} /> 
