--- a/packages/storybook-html/stories/components/header-legacy/header.mdx
+++ b/packages/storybook-html/stories/components/header-legacy/header.mdx
@@ -26,9 +26,7 @@ using [*UQ Search*](https://www.uq.edu.au/search).
 > searching for books or articles in a library database.
 
 <Canvas sourceState="hidden" withToolbar>
-  {/* <Story height={220} id="legacy-header--header-no-local-search" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
-
-  <Story height={220} id="legacy-header--header-no-local-search" />
+  <Story of={HeaderStories.headerNoLocalSearch} /> 
 </Canvas>
 
 ```html
@@ -164,9 +162,7 @@ allow users to choose to search all UQ sites or just the content on your site\*.
 > to use the global header **with global search only**.
 
 <Canvas sourceState="hidden" withToolbar>
-  {/* <Story height={220} id="legacy-header--header" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
-
-  <Story height={220} id="legacy-header--header" />
+  <Story of={HeaderStories.header} /> 
 </Canvas>
 
 ```html
