--- a/packages/storybook-html/stories/components/icon/icon.mdx
+++ b/packages/storybook-html/stories/components/icon/icon.mdx
@@ -12,9 +12,7 @@ import * as IconStories from './icon.stories';
 
 ## List of icons
 
-{/* <Story id="components-icon--icon" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
-
-<Story id="components-icon--icon" />
+  <Story of={IconStories.icon} /> 
 
 ## Usage
 
