--- a/packages/storybook-html/stories/layout/card-grid/card-grid.docs.mdx
+++ b/packages/storybook-html/stories/layout/card-grid/card-grid.docs.mdx
@@ -37,7 +37,7 @@ In this target size, cards will display full width at all times.
 
 Modifier class: `.uq-card-grid--target-1x`
 
-<Canvas withSource="none">
+<Canvas sourceState='hidden'>
   <Story id="layout-card-grid--one-per-row" />
 </Canvas>
 
@@ -47,7 +47,7 @@ Cards will typically display two per row except on some mobile devices.
 
 Modifier class: `.uq-card-grid--target-2x`
 
-<Canvas withSource="none">
+<Canvas sourceState='hidden'>
   <Story id="layout-card-grid--two-per-row" />
 </Canvas>
 
@@ -58,7 +58,7 @@ devices and one per row on mobile devices.
 
 Modifier class: `.uq-card-grid--target-3x`
 
-<Canvas withSource="none">
+<Canvas sourceState='hidden'>
   <Story id="layout-card-grid--three-per-row" />
 </Canvas>
 
@@ -70,6 +70,6 @@ on mobile devices.
 
 Modifier class: `.uq-card-grid--target-4x`
 
-<Canvas withSource="none">
+<Canvas sourceState='hidden'>
   <Story id="layout-card-grid--four-per-row" />
 </Canvas>
