--- a/packages/storybook-html/stories/components/hero-basic/hero-basic.docs.mdx
+++ b/packages/storybook-html/stories/components/hero-basic/hero-basic.docs.mdx
@@ -24,8 +24,8 @@ There are 4 elements within the basic hero.
 
 There are no size or colour variations for the basic hero component.
 
-<Canvas withSource="none">
-  <Story id="components-hero-basic--hero-basic" />
+<Canvas sourceState='hidden'>
+  <Story of={HeroBasicStories.HeroBasic} /> 
 </Canvas>
 
 ```html
@@ -72,17 +72,17 @@ There are no size or colour variations for the basic hero component.
 #### Basic
 
 <Canvas>
-  <Story id="components-hero-basic--basic" />
+  <Story of={HeroBasicStories.HeroBasic} /> 
 </Canvas>
 
 #### Program
 
 <Canvas>
-  <Story id="components-hero-basic--program" />
+  <Story of={HeroBasicStories.Program} /> 
 </Canvas>
 
 #### Plan
 
 <Canvas>
-  <Story id="components-hero-basic--plan" />
+  <Story of={HeroBasicStories.Plan} /> 
 </Canvas>
