--- a/packages/storybook-html/stories/components/sections/sections.mdx
+++ b/packages/storybook-html/stories/components/sections/sections.mdx
@@ -18,7 +18,7 @@ Sections are a layout style that wrap content in a white or grey background with
 
 The default section displays left-aligned content, medium top and bottom padding, on a white background contained to the page width.
 
-<Canvas withSource="none">
+<Canvas sourceState='hidden'>
   <Story id="components-sections--sections-default" />
 </Canvas>
 
@@ -43,7 +43,7 @@ The variants can be used in isolation or combined. For example if you would like
 
 Add class `uq-section--centered` to centre-align the content.
 
-<Canvas withSource="none">
+<Canvas sourceState='hidden'>
   <Story id="components-sections--sections-centered" />
 </Canvas>
 
@@ -64,7 +64,7 @@ Add class `uq-section--centered` to centre-align the content.
 
 Add class `uq-section--narrow` to contain the content to a narrow container.
 
-<Canvas withSource="none">
+<Canvas sourceState='hidden'>
   <Story id="components-sections--sections-narrow" />
 </Canvas>
 
@@ -85,7 +85,7 @@ Add class `uq-section--narrow` to contain the content to a narrow container.
 
 Add class `uq-section--shaded` to apply a light-grey background to the section.
 
-<Canvas withSource="none">
+<Canvas sourceState='hidden'>
   <Story id="components-sections--sections-shaded" />
 </Canvas>
 
@@ -118,7 +118,7 @@ Default sections have medium top and bottom padding. The following variants prov
 
 #### No padding
 
-<Canvas withSource="none">
+<Canvas sourceState='hidden'>
   <Story id="components-sections--sections-no-padding" />
 </Canvas>
 
@@ -140,7 +140,7 @@ Default sections have medium top and bottom padding. The following variants prov
 
 #### Large padding
 
-<Canvas withSource="none">
+<Canvas sourceState='hidden'>
   <Story id="components-sections--sections-large-padding" />
 </Canvas>
 
