--- a/packages/storybook-html/stories/layout/page-layouts/sidebar/sidebar.docs.mdx
+++ b/packages/storybook-html/stories/layout/page-layouts/sidebar/sidebar.docs.mdx
@@ -21,7 +21,7 @@ Then implement the component as per the HTML example below.
 the `.uq-sections` element should be used within `.uq-sidebar-layout__main` to
 provide correct **section spacing**.
 
-<Canvas withSource="none">
+<Canvas sourceState='hidden'>
   <Story id="layout-page-layouts-sidebar--sidebar" />
 </Canvas>
 
@@ -40,7 +40,7 @@ provide correct **section spacing**.
 
 #### Sidebar layout with sections and card grids
 
-<Canvas withSource="none">
+<Canvas sourceState='hidden'>
   <div class="uqds-layout-demo-bg">
     <div class="uq-container">
       <div class="uq-sidebar-layout">
