--- a/packages/storybook-html/stories/layout/sections/sections.docs.mdx
+++ b/packages/storybook-html/stories/layout/sections/sections.docs.mdx
@@ -20,7 +20,7 @@ own `margin` property.
 
 `.uq-sections` elements can be safely nested within each other as needed.
 
-<Canvas withSource="none">
+<Canvas sourceState='hidden'>
   <Story id="layout-sections--sections" />
 </Canvas>
 
