--- a/packages/storybook-html/stories/components/page-header/page-header.mdx
+++ b/packages/storybook-html/stories/components/page-header/page-header.mdx
@@ -12,9 +12,7 @@ The Page header component is used to display the page title or the breadcrumbs o
 The default background color is set to light grey to distinguish it from the page contents.
 
 <Canvas sourceState="hidden">
-  {/* <Story id="components-page-header--page-header" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
-
-  <Story id="components-page-header--page-header" />
+  <Story of={PageHeaderStories.pageHeader} /> 
 </Canvas>
 
 ### Page header default
