--- a/packages/storybook-html/stories/components/pagination/pagination.mdx
+++ b/packages/storybook-html/stories/components/pagination/pagination.mdx
@@ -20,25 +20,19 @@ If the component is displaying the last page, the links 'last' and 'next' are re
 ### Pagination first
 
 <Canvas sourceState="hidden">
-  {/* <Story id="components-pagination--pagination-first" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
-
-  <Story id="components-pagination--pagination-first" />
+  <Story of={PaginationStories.paginationFirst} /> 
 </Canvas>
 
 ### Pagination middle
 
 <Canvas sourceState="hidden">
-  {/* <Story id="components-pagination--pagination-middle" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
-
-  <Story id="components-pagination--pagination-middle" />
+  <Story of={PaginationStories.paginationMiddle} /> 
 </Canvas>
 
 ### Pagination last
 
 <Canvas sourceState="hidden">
-  {/* <Story id="components-pagination--pagination-last" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
-
-  <Story id="components-pagination--pagination-last" />
+  <Story of={PaginationStories.paginationLast} /> 
 </Canvas>
 
 #### The table below list's the classname's of the pagination component and what it does.
